--- a/src/main/resources/templates/fragments/padrao.html
+++ b/src/main/resources/templates/fragments/padrao.html
@@ -9,7 +9,8 @@
       
    <!--<div class="card text-center" style="text-align: center;">  -->       
             <img class="kaos "src="../../img/android-chrome-512x512.png" alt="">
-          <p class="card-text">By KAOS</p>
+         <p class="card-text">By KAOS<br> Desenvolvimento de Sistemas - 2022</p>
+         
     
      <!-- </div> -->
     </footer>
