--- a/src/main/resources/templates/pesquisa/listaResposta.html
+++ b/src/main/resources/templates/pesquisa/listaResposta.html
@@ -47,7 +47,7 @@
         <nav class="navbar navbar-dark  fixed-top">
 		<div class="container-fluid">
 			<div>
-				<img class="Logo_kaos "src="../../img/Logo_KAOS.png" alt="">
+				<img class="Logo_kaos "src="../../img/logo-claro.png" alt="">
             </div>
 
 		  <p class="navbar-brand" style="color: white; font-size:xx-large;" >Lista de Resposta</p>
