--- a/src/main/resources/templates/justificativa/justificativaItem.html
+++ b/src/main/resources/templates/justificativa/justificativaItem.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../../css/pesquisa/pesquisa.css" />
-
+    <link rel="stylesheet" href="../../css/justifica.css" />
     <!-- CSS only -->
 
     <link
@@ -29,7 +29,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
           rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-          crossorigin="anonymous">
+          crossorigin="anonymous" />
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
@@ -64,29 +64,27 @@
     </div>
 
     <input type="hidden" name="id" id="idjust"/>
-    <div class="mb-3">
+    <div class="form-floating mb-3 dv">
         <input type="hidden" th:name="itemResposta.id" th:value="${item?.id}" />
     </div>
     
-    <div class="mb-3">
+    <div class="mb-3 dv">
         <label>Pergunta</label>
-        <textarea class="form-control" style="height: 100px" th:text="${pergunta.textoPergunta}" disabled></textarea>
+        <textarea class="form-control" id="floatingTextarea2" style="height: 100px;" th:text="${pergunta.textoPergunta}" disabled></textarea>
         <!--
         <input type="text" th:value="${pergunta.textoPergunta}" disabled>
         -->
     </div>
-    <br>
-    <div>
+    <div class="mb-3 dv">
         <label>Comentario</label>
         <textarea class="form-control" style="height: 100px;" th:text="${item?.comentario}" disabled></textarea>
          <!-- <input type="text" th:value="${item?.comentario}" disabled> -->
     </div>
-    <br>
-    <div>
+    <div class="mb-3 dv">
         <label>justifique-se</label>
         <textarea class="form-control" style="height: 100px;" name="texto"></textarea>
     </div>
-    <br>
+
     <div>
         <button class="btn btn-primary" type="submit">Cadastrar</button>
     </div>
