--- a/src/main/resources/templates/justificativa/justificativaItem.html
+++ b/src/main/resources/templates/justificativa/justificativaItem.html
@@ -58,7 +58,7 @@
     <h4>JUSTIFICATIVA ITEM</h4  >
 
     <form method="post" style="border:2" action="novaJustiItem">
-    <div class="alert alert-success collapse" role="alert" id="myAlert">
+    <div class="alert alert-success collapse dv" role="alert" id="myAlert">
         <button class="btn-close" data-bs-dismiss="alert"></button>
         <h4 class="alert-heading">Justificativa registrada com sucesso!</h4>
     </div>
