--- a/src/main/resources/templates/justificativa/justificativaResposta.html
+++ b/src/main/resources/templates/justificativa/justificativaResposta.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../../css/pesquisa/pesquisa.css" />
+    <link rel="stylesheet" href="../../css/justifica.css" />
 
     <!-- CSS only -->
 
@@ -33,7 +34,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-            <link rel="stylesheet" href="../../css/pesquisa/pesquisa.css" />
+        
 
 
     <title>Justificativa</title>
@@ -59,32 +60,32 @@
 <h4>JUSTIFICATIVA RESPOSTA</h4>
 <form method="post" style="border:2" action="novaJustiResp">
 
-    <div class="alert alert-success collapse" role="alert" id="myAlert">
+    <div class="alert alert-success collapse dv" role="alert" id="myAlert">
         <button class="btn-close" data-bs-dismiss="alert"></button>
         <h4 class="alert-heading">Justificativa registrada com sucesso!</h4>
     </div>
 
     <input type="hidden" name="id"/>
-    <div class="mb3">
+    <div class="mb-3 dv">
         <input type="hidden" th:name="resposta.id" th:value="${resposta?.id}" />
     </div>
-    <br>
+    
 
-    <div class="mb-3">
+    <div class="mb-3 dv">
         <label>Comentario Geral </label>
         <textarea class="form-control" style="height: 100px" th:text="${resposta?.comentarioGeral}" disabled></textarea>
         <!--
             <input type="text" th:value="${resposta?.comentarioGeral}" disabled>
         -->
     </div>
-    <br>
-    <div class="mb-3 form-floating">
+    
+    <div class="mb-3 form-floating dv">
         
         <textarea class="form-control" placeholder="Justifique Aqui" id="floatingTextarea2" style="height: 100px" name="texto" maxlength="250"></textarea>
         <label for="floatingTextarea2">Justifique</label>
     </div>
-    <br>
-    <div class="mb-3">
+    
+    <div class="mb-3 dv">
         <button class="btn btn-primary" type="submit">Cadastrar</button>
     </div>
 </form>
