--- a/src/main/resources/templates/listas/listaUsuarios.html
+++ b/src/main/resources/templates/listas/listaUsuarios.html
@@ -130,7 +130,15 @@
 				  		<p class="item-inativo"> &ensp; Inativo</p>	
 				  	</div>
 
-							<div class="alert alert-success collapse" role="alert" id="myAlert">
+							<div class="alert alert-success collapse" role="alert" id="myAlert" style="
+										position: fixed;
+										top: 0;
+										bottom: 0;
+										left: 0;
+										right: 0;
+										width: 300px;
+										height: 150px;
+										margin: auto;">
 								<button class="btn-close" data-bs-dismiss="alert"></button>
 								<h4 class="alert-heading">Cadastro desativado com sucesso!</h4>
 							</div>
@@ -197,7 +205,7 @@
 $(document).ready(function () {
 	var desativa = [[${desativa}]];
 	if(desativa == false){
-		$('#myAlert').show('fade');
+		$('#myAlert').show('fade').focus();
 	}
 });
 </script>
