--- a/src/main/resources/templates/listas/listaUsuarios.html
+++ b/src/main/resources/templates/listas/listaUsuarios.html
@@ -39,6 +39,10 @@
 				<div class="offcanvas-body">
 				  <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
 
+					<li class="nav-item dropdown">
+						<button class="dropdown-item" aria-current="page" onclick='history.go(-1)'>Home</button>
+					  </li>
+
 					<li class="nav-item dropdown" th:if="${session.docenciaLogado == null} ">
 					
 						<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -93,7 +97,7 @@
 			  </div>
 			</div>
 		  </nav>
-		  	  			<div class="resultado">
+		  	  			<div class="resultadoU">
 			  
 				  	<div class="resultado-item">
 				  		<p class="item-ativo"> &ensp; Ativo</p>
@@ -130,13 +134,13 @@
 				<td th:text="${user.nif}" />
 				<td th:text="${user.tipo}" />
 
-				<td><a th:href="@{/alterar(userId=${user.userId})}"><i
+				<td><a th:href="@{/alterar(userId=${user.userId})}" style="background-color: white;" type="button" class="btn btn-outline-dark"><i
 						class="material-icons">create</i> </a></td>
 
-				<td><a th:href="@{/reseta(userId=${user.userId})}"> <i
+				<td><a th:href="@{/reseta(userId=${user.userId})}" style="background-color: white;" type="button" class="btn btn-outline-dark"> <i
       					class="material-icons">autorenew</i></a></td> 		
 						
-			<td><button th:disabled="${!user.isAtivo}" onclick="desativa()">
+			<td><button th:disabled="${!user.isAtivo}" onclick="desativa()" style="background-color: white;" type="button" class="btn btn-outline-dark">
 						<a th:href="@{/desativar(userId=${user.userId})}"> <i
 							class="material-icons">delete_forever</i></a>
 					</button></td>
