--- a/src/main/resources/templates/pergunta/listaPergunta.html
+++ b/src/main/resources/templates/pergunta/listaPergunta.html
@@ -37,6 +37,9 @@
 			</div>
 			<div class="offcanvas-body">
 			  <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+				<li class="nav-item dropdown">
+						<button class="dropdown-item" aria-current="page" onclick='history.go(-1)'>Home</button>
+					  </li>
               <li class="nav-item dropdown" th:if="${session.docenciaLogado == null} ">
 				
 					<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
