--- a/src/main/resources/templates/pesquisa/listaPesquisa.html
+++ b/src/main/resources/templates/pesquisa/listaPesquisa.html
@@ -39,6 +39,9 @@
 			</div>
 			<div class="offcanvas-body">
 				<ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+					<li class="nav-item dropdown">
+						<button class="dropdown-item" aria-current="page" onclick='history.go(-1)'>Home</button>
+					  </li>
 
               <li class="nav-item dropdown" th:if="${session.docenciaLogado == null} ">
 					  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -95,7 +98,7 @@
 		</div>
 	  </nav>
 	  
-	  			<div class="resultado">
+	  			<div class="resultadoP">
 			  
 				  	<div class="resultado-item">
 				  		<p class="item-ok"> &ensp; Ok</p>	
@@ -103,7 +106,11 @@
 				  	
 				  	<div class="resultado-item">
 				  		<p class="item-pendente"> &ensp; Pendente</p>	
-				  	</div>	  	
+				  	</div>	
+					
+					<div class="resultado-item">
+						<p class="item-atrasado"> &ensp; Atrasado</p>	
+					</div>
 	
 			  </div>
 			  
@@ -129,7 +136,7 @@
 				<td th:text="${ps.id}"></td>
 				<td th:text="${ps.curso?.descCurso}"/>
 				<td th:text="${ps.turma}"/>
-				<td th:text="${#dates.format(ps.dataVencimento, 'dd/MM/yyyy')}" th:style="${ps.dataVencimento.after(#dates.createNow())} ? 'color: black' : 'color: red'" ></td>
+				<td th:text="${#dates.format(ps.dataVencimento, 'dd/MM/yyyy')}" th:style="${ps.dataVencimento.after(#dates.createNow())} ? 'color: black' : 'color: #c32f27'" ></td>
 				<td id="italico" th:text="${ps.justificativa ? 'Justificativa pendente, acesse a lista de respostas para responder' : 'Nenhuma pendência'}"/>
 				<td><a th:if="${ps.listaResposta.size() > 0}" th:text="${ps.listaResposta.size() > 0 ? 'Lista de Respostas' : 'NN'}" type="button" class="btn btn-outline-dark" th:href="@{/pesquisa/listarResposta(id=${ps.id})}" style=" text-decoration: none">Lista de Resposta</a></td>
 					<td th:style="${ps.justificativa} ? 'background-color: #d55d92' : 'background-color: #3745a4'" />
