--- a/src/main/resources/templates/listas/listaUsuarios.html
+++ b/src/main/resources/templates/listas/listaUsuarios.html
@@ -163,12 +163,10 @@
       					class="material-icons">autorenew</i></a></td> 		
 						
 			<td>
-				<button th:if="${user.isAtivo == true}" onclick="desativa()">
 
-						<a th:attr="onclick=|return confirm('Deseja desativar: ${user.nome}?')|"
-						   th:href="@{/desativar(userId=${user.userId})}"> <i
-							class="material-icons">delete_forever</i></a>
-				</button>
+						<a th:if="${user.isAtivo == true}" onclick="desativa()" th:attr="onclick=|return confirm('Deseja desativar: ${user.nome}?')|"
+						   th:href="@{/desativar(userId=${user.userId})}" style="background-color: white;" type="button" class="btn btn-outline-dark"> 
+						   <i class="material-icons">delete_forever</i></a>
 			</td>
 
 				<td
