correcao lista de usuario

--- a/src/main/resources/templates/listas/listaUsuarios.html
+++ b/src/main/resources/templates/listas/listaUsuarios.html
@@ -123,16 +123,17 @@
 			  </div>
 			</div>
 		  </nav>
-			<div class="resultado">
-				  	<div class="resultado-item">
-				  		<p class="item-ativo"> &ensp; Ativo</p>
-							
-				  	</div>
-				  	
-				  	<div class="resultado-item">
-				  		<p class="item-inativo"> &ensp; Inativo</p>	
-				  	</div>
-			  </div>
+		  <div class="resultadoU">
+			  
+			<div class="resultado-item">
+				<p class="item-ativo"> &ensp; Ativo</p>
+				  
+			</div>
+			
+			<div class="resultado-item">
+				<p class="item-inativo"> &ensp; Inativo</p>	
+			</div>
+			</div>
 
 		<h1>Lista</h1>
 		<table class="table">
