--- a/src/main/resources/templates/justificativa/justificativaResposta.html
+++ b/src/main/resources/templates/justificativa/justificativaResposta.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../../css/pesquisa/pesquisa.css" />
-    <link rel="stylesheet" href="../../css/justifica.css" />
+    <link rel="stylesheet" href="../../css/note-response.css" />
 
     <!-- CSS only -->
 
@@ -57,7 +57,7 @@
 
 
 <div class="container main-div">
-<h4>JUSTIFICATIVA RESPOSTA</h4>
+<h4>JUSTIFICATIVA</h4>
 <form method="post" style="border:2" action="novaJustiResp">
 
     <div class="alert alert-success collapse dv" role="alert" id="myAlert">
