--- a/src/main/resources/static/css/listas/lista.css
+++ b/src/main/resources/static/css/listas/lista.css
@@ -68,7 +68,6 @@ width: 17% !important;
   margin-bottom: 70px;
   margin-left: 70px;
   margin-right:70px;
-  padding-bottom: 80px;
   width:92% !important;
  
 }
@@ -103,6 +102,7 @@ background: linear-gradient(90deg, rgba(149,29,179,1) 0%, rgba(123,22,195,1) 36%
   text-align: center;
   height: 80px;
      left: 0;
+     margin-top: auto;
 
 }
 .card-text{
@@ -150,7 +150,8 @@ p {
 
   display: flex;
   position: absolute;
-  top: 15%;
+  top: 13%;
+  bottom: 13%;
   left: 41%;
   font-family: Arial, Helvetica, sans-serif;
   
