--- a/src/main/resources/static/css/sections.css
+++ b/src/main/resources/static/css/sections.css
@@ -62,9 +62,12 @@ td{
   white-space: normal;
   
 }
+th{
+  width: 500%;
+}
 
 .stquest{
-  width: 25%;
+  width: 35%;
 }
 .thquest{
   width: 25%;
@@ -84,6 +87,8 @@ details[open] > summary {
     animation-fill-mode: forwards;
     border-left: 1px solid red;
     border-bottom: 1px solid red;
+    border-right: 1px solid red;
+  
   }
 
 }
