--- a/src/main/resources/templates/justificativa/justificativaItem.html
+++ b/src/main/resources/templates/justificativa/justificativaItem.html
@@ -76,12 +76,12 @@
         -->
     </div>
     <div class="mb-3 dv">
-        <label>comentário</label>
+        <label>Comentário</label>
         <textarea class="form-control" style="height: 100px;" th:text="${item?.comentario}" disabled></textarea>
          <!-- <input type="text" th:value="${item?.comentario}" disabled> -->
     </div>
     <div class="mb-3 dv">
-        <label>justifique-se</label>
+        <label>Justifique-se</label>
         <textarea class="form-control" style="height: 100px;" name="texto" maxlength="250"></textarea>
     </div>
 
