--- a/src/main/resources/templates/justificativa/justificativaResposta.html
+++ b/src/main/resources/templates/justificativa/justificativaResposta.html
@@ -72,7 +72,7 @@
     
 
     <div class="mb-3 dv">
-        <label>comentário Geral </label>
+        <label>Comentário Geral </label>
         <textarea class="form-control" style="height: 100px" th:text="${resposta?.comentarioGeral}" disabled></textarea>
         <!--
             <input type="text" th:value="${resposta?.comentarioGeral}" disabled>
@@ -80,7 +80,7 @@
     </div>
     
     <div class="mb-3 dv">
-        <label >Justifique</label>
+        <label >Justifique-se</label>
         <textarea class="form-control"  style="height: 100px" name="texto" maxlength="250"></textarea>
         
     </div>
