--- a/src/main/resources/templates/justificativa/justificativaItem.html
+++ b/src/main/resources/templates/justificativa/justificativaItem.html
@@ -34,11 +34,55 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
+    <link rel="apple-touch-icon" sizes="180x180" href="../img/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../../img/favicon-16x16.png">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 
 
     <title>Justificativa</title>
 </head>
 <body>
+<nav class="navbar navbar-dark  fixed-top">
+    <div class="container-fluid">
+
+        <div>
+            <img class="Logo_kaos "src="../../img/logo-claro.png" alt="">
+        </div>
+
+        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
+            <span class="navbar-toggler-icon"></span>Menu
+        </button>
+
+        <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
+            <div class="offcanvas-header">
+                <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Menu</h5>
+                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            </div>
+            <div class="offcanvas-body">
+                <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                    <li th:if="${session.docenciaLogado} " class="nav-item dropdown">
+                        <button class="dropdown-item" aria-current="page" onclick="javascript:location.href='/telaInicialDocencia'"><i class="material-icons" style="color:white;">home</i></button>
+                    </li>
+                    <li th:if="${session.diretoriaLogado} " class="nav-item dropdown">
+                        <button class="dropdown-item" aria-current="page" onclick="javascript:location.href='/telaInicialDiretor'"><i class="material-icons" style="color:white;">home</i></button>
+                    </li>
+                    <li th:if="${session.secretariaLogado} " class="nav-item dropdown">
+                        <button class="dropdown-item" aria-current="page" onclick="javascript:location.href='/telaInicialSecretaria'"><i class="material-icons" style="color:white;">home</i></button>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/resposta/codigoPesquisa">Formulário</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://app.powerbi.com/view?r=eyJrIjoiMDk3M2UwYmYtYzNiYi00YzgyLTg2ZjUtYTMwYWUwNmVkZTZhIiwidCI6ImIxMDUxYzRiLTNiOTQtNDFhYi05NDQxLWU3M2E3MjM0MmZkZCJ9">Média</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</nav>
     <div class="area">
 		<ul class="circles">
 			<li></li>
@@ -90,11 +134,6 @@
     </div>
 </form>
 </div>
-<!--<script>-->
-<!--    function enviaJust() {-->
-<!--alert("Justificativa respondida com sucesso!!");-->
-<!--}-->
-<!--</script>-->
 <script type="text/javascript">
 $(document).ready(function () {
 	var idjust = [[${idjust}]];
